# sunglasses-filter

./: .gitattributes  CMakeLists.txt  README.md  abstractdetector.cpp  abstractdetector.h  abstractimagefilter.h  dummywriter.h  haardetector.cpp  haardetector.h  imagefilereader.cpp  imagefilereader.h  imagefilewriter.cpp  imagefilewriter.h  main.cpp  mediafactory.cpp  mediafactory.h  mediasink.h  mediasource.h  proportionaleyedetector.cpp  proportionaleyedetector.h  submission.cpp  sunglassesfilter.cpp  sunglassesfilter.h  videofilereader.cpp  videofilereader.h  videofilewriter.cpp  videofilewriter.h  webcamreader.cpp  webcamreader.h
